some rain drops added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="weather-details weather-night">
+        <div class="weather-details weather-sunny">
             <div>
                 <p class="sunny-text weather-text">Sunny</p>
                 <p class="night-text weather-text">Cloud Night</p>
@@ -58,6 +58,22 @@
                 <div class="rainy-inner weather-inner">
                     <img class="cloud-image" src="./images/cloud.svg" alt="Sunny">
                     <img class="thunder" src="./images/thunder.svg" alt="thunder">
+                    <div class="rain-drops-v1">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="rain-drops-v2">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
             </div>
         </div>
