Some clouds and rainy drops added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="weather-details weather-sunny">
+        <div class="weather-details weather-rainy">
             <div>
                 <p class="sunny-text weather-text">Sunny</p>
                 <p class="night-text weather-text">Cloud Night</p>
@@ -48,17 +48,27 @@
                 <div class="night-inner weather-inner">
                     <img class="cloud-image" src="./images/cloud.svg" alt="cloud-night">
                     <img class="moon" src="./images/moon.svg" alt="moon image">
-                    <div class="big-cloud"></div>
-                    <div class="small-cloud"></div>
-                    <div class="smaller-cloud"></div>
-                    <div class="smallest-cloud"></div>
+                    <div class="small-clouds small-clouds-v1">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="small-clouds small-clouds-v2">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="small-clouds small-clouds-v3">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
             </div>
             <div class="rainy-image weather-image">
                 <div class="rainy-inner weather-inner">
                     <img class="cloud-image" src="./images/cloud.svg" alt="Sunny">
                     <img class="thunder" src="./images/thunder.svg" alt="thunder">
-                    <div class="rain-drops-v1">
+                    <div class="rain-drops rain-drops-v1">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -66,7 +76,21 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <div class="rain-drops-v2">
+                    <div class="rain-drops rain-drops-v2">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="rain-drops rain-drops-v3">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="rain-drops rain-drops-v4">
                         <span></span>
                         <span></span>
                         <span></span>
